list of files ok but cant delete rename or add file becaus cors exception